build_error.txt
cargo : warning: unused imports: `AuditEventType` and `AuditService`
At line:1 char:3339
+ ... bun\bin; gcc = 'gcc'; g++ = 'g++'; cargo check --release 2>&1 | Out-F ...
+                                        ~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning: unused... `AuditService`:Strin 
   g) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
 --> src\api\handlers\files.rs:3:30
  |
3 | use crate::services::audit::{AuditEventType, AuditService};
  |                              ^^^^^^^^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `TransactionTrait`
  --> src\api\handlers\files.rs:17:10
   |
17 |     Set, TransactionTrait,
   |          ^^^^^^^^^^^^^^^^

warning: unused import: `tokio::io::AsyncReadExt`
  --> src\api\handlers\users.rs:15:5
   |
15 | use tokio::io::AsyncReadExt;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `DbErr`
 --> src\services\file_service.rs:9:56
  |
9 |     ActiveModelTrait, ColumnTrait, DatabaseConnection, DbErr, EntityTrait, Que...
  |                                                        ^^^^^

warning: unused import: `sleep`
 --> src\services\worker.rs:7:29
  |
7 | use tokio::time::{Duration, sleep};
  |                             ^^^^^

warning: unused variable: `pub_key_pem`
  --> src\api\handlers\auth.rs:70:9
   |
70 |     let pub_key_pem: Option<String> = None;
   |         ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: 
`_pub_key_pem`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `priv_key_path`
  --> src\api\handlers\auth.rs:71:9
   |
71 |     let priv_key_path: Option<String> = None;
   |         ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an 
underscore: `_priv_key_path`

warning: variable does not need to be mutable
   --> src\api\handlers\auth.rs:422:9
    |
422 |     let mut user = match user {
    |         ----^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `file_key`
   --> src\api\handlers\files.rs:392:9
    |
392 |     let file_key: Option<[u8; 32]> = None;
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: 
`_file_key`

warning: unused variable: `user`
   --> src\services\file_service.rs:201:13
    |
201 |         let user = Users::find_by_id(&user_id)
    |             ^^^^ help: if this is intentional, prefix it with an underscore: 
`_user`

warning: `rust-file-backend` (lib) generated 10 warnings (run `cargo fix --lib -p 
rust-file-backend` to apply 6 suggestions)
    Checking rust-file-backend v0.1.0-beta.4 (D:\projects\rust-file-backend)
error[E0432]: unresolved import `rust_file_backend::services::key_management`
 --> src\bin\rotate_secret.rs:3:34
  |
3 | use rust_file_backend::services::key_management::KeyManagementService;
  |                                  ^^^^^^^^^^^^^^ could not find `key_management` 
in `services`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `rust-file-backend` (bin "rotate_secret") due to 1 previous 
error
